external-projects/sui-prover/crates/sui-prover/tests/snapshots/option/option_rich_support_fail.move.snap
---
source: crates/sui-prover/tests/integration.rs
assertion_line: 149
expression: output
---
exiting with verification errors
error: prover::ensures does not hold
   ┌─ tests/inputs/option/option_rich_support_fail.move:15:5
   │
15 │     ensures(r == (x != y));
   │     ^^^^^^^^^^^^^^^^^^^^^^
   │
   =     at tests/inputs/option/option_rich_support_fail.move:11: eq_address_spec
